SERVER-10919 logging in ~ReplicaSetsMonitor crashes